unpackaged/objects/PayPal_EndPoint__mdt.object
<CustomObject>
    <fields>
        <fullName>Create_Order__c</fullName>
        <label>Create Order</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Create_Plans__c</fullName>
        <label>Create Plans</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Create_Product__c</fullName>
        <label>Create Product</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Create_Subscriptions__c</fullName>
        <label>Create Subscriptions</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Create_draft_invoice__c</fullName>
        <label>Create draft invoice</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Generate_Token__c</fullName>
        <label>Generate Token</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Make_Payment__c</fullName>
        <label>Make Payment</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Refund_URL__c</fullName>
        <label>Refund URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Remind_Invoice__c</fullName>
        <label>Remind Invoice</label>
        <type>Url</type>
    </fields>
    <label>PayPal EndPoint</label>
    <pluralLabel>PayPal EndPoints</pluralLabel>
</CustomObject>